opam-version: "2.0"
name: "hello"
synopsis: "Minimal OCaml project for starting a new one"
maintainer: "Christian Lindig <lindig@gmail.com>"
authors: "Christian Lindig <lindig@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/lindig/hello"
bug-reports: "https://github.com/lindig/hello/issues"
depends: [
  "dune" {build}
  "fit"
  "cmdliner"
]
build: ["dune" "build" "-p" name "-j" jobs "@install"]
dev-repo: "git+https://github.com/lindig/hello.git"
